added banner and section survice

--- a/index.html
+++ b/index.html
@@ -4,8 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asinment 1</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    
+    <header class="banner-container">
+<section class="banner-contant">
+    <p class="title-banner ">Happy New Year</p>
+    <h1 class="subtitle-banner ">New Year Party <br> Celebration</h1>
+</section>
+    </header>
+    <main>
+<section class="section-container">
+<h1 class="h1">65% OFF</h1>
+<p class="p">OUR HOLIDAY DEALS ARE BETTER</p>
+<h3 class="h3">ALL CATEGORIES</h3>
+<div class="section-image">
+<img src="images/New Year Photo.png" alt="">
+</div>
+</section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
